# freela-food

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 003_jobs_and_geo.py  004_applications_contracts_notifications.py  005_invitations_and_contract_origin.py  006_reviews.py  007_reports_moderation.py  008_payments.py  1baf1247a1bf_profile_fields_pgcrypto.py  28537b12be97_initial_schema.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  logging.py  redis_client.py  security.py  storage.py
app/domain/models/: __init__.py  application.py  audit_log.py  base.py  establishment_profile.py  freelancer_profile.py  freelancer_skill.py  invitation.py  job_posting.py  notification.py  payment.py  report.py  review.py  service_contract.py  skill_category.py  user.py
app/domain/repositories/: admin_repository.py  application_repository.py  contract_repository.py  freelancer_repository.py  invitation_repository.py  job_repository.py  notification_repository.py  payment_repository.py  profile_repository.py  report_repository.py  review_repository.py  user_repository.py
app/domain/schemas/: admin.py  application.py  auth.py  contract.py  freelancer_search.py  invitation.py  job.py  matching.py  me.py  notification.py  payment.py  (+3 more)
app/utils/: audit.py  br_validators.py
app/workers/: arq_worker.py  tasks.py
frontend/: package-lock.json  package.json
tests/: conftest.py  factories.py
tests/integration/: test_admin.py  test_application_accept.py  test_applications.py  test_auth.py  test_avatar.py  test_contracts.py  test_cron_lifecycle.py  test_cron_reveal.py  test_freelancer_search.py  test_health.py  test_invitation_accept.py  test_invitations.py  test_job_search.py  test_jobs.py  test_matching.py  test_me.py  test_moderation_admin.py  test_notifications.py  test_notifications_extended.py  test_payments.py  test_profile.py  test_reports.py  test_reviews_create.py  test_reviews_listing.py  test_reviews_rating.py  test_reviews_visibility.py  test_security.py
tests/unit/: test_scoring.py
(+59 files in other folders)
