[project]
name = "freela-food"
version = "0.1.0"
description = "Marketplace bidirecional para freelancers de food service e estabelecimentos"
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [
    { name = "Luiz Felipe", email = "luiz23.lfsc@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "arq>=0.26.1",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "pyjwt[crypto]>=2.10.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",
    "boto3>=1.35.0",
    "geoalchemy2>=0.15.2",
    "shapely>=2.0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-redis>=4.6.0",
    "boto3-stubs[s3]>=1.35.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "T20", "RUF"]
ignore = [
    "B008",  # FastAPI usa Depends() em defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"alembic/**" = ["E501"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic/versions/"]

[[tool.mypy.overrides]]
module = "shapely.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geoalchemy2.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["app"]
omit = ["alembic/*", "tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
